<resources>
    <string name="app_name">Mixolo</string>
    <string name="add_machine">Ajouter une machine</string>
    <string name="machine_name">Nom de la machine</string>
    <string name="delete">Supprimer</string>
    <string name="cancel">Annuler</string>
    <string name="save">Enregistrer</string>
    <string name="machines">Machines</string>
    <string name="scan_your_code_on_your_machine">Scanner le QR Code présent sur votre machine Mixolo</string>
    <string name="delete_confirmation_machines">"Êtes-vous sûr de vouloir supprimer %d machine(s) ? "</string>
    <string name="delete_confirmation">Confirmer la suppression</string>
    <string name="cocktail">Cocktails</string>
    <string name="capacities">Capacités</string>
    <string name="status">Statut</string>
    <string name="container_name">Nom de la boisson</string>
    <string name="edit">Modifier</string>
    <string name="edit_machine_name">Modifier le nom de la machine</string>
    <string name="start">Démarrer</string>
    <string name="add_cocktail">Ajouter un cocktail</string>
    <string name="cl">cl</string>
    <string name="default_amount">5</string>
    <string name="add">Ajouter</string>
    <string name="manage_qrcode">Géréer les QR Codes</string>
    <string name="containers_number">Nombre de réservoirs</string>
    <string name="default_container_capacity">Capacité par défaut des réservoirs</string>
    <string name="login">Se connecter</string>
    <string name="logout">Se déconnecter</string>
    <string name="sign_default_text">Bienvenue dans l\'application de gestion d\'appareils Mixolo !\n\nVeuillez vous connecter pour continuer.</string>
    <string name="logout_confirmation">Confirmation de déconnexion</string>
    <string name="logout_confirmation_message">Êtes-vous sur de vouloir vous déconnecter ?</string>
    <string name="cocktail_quantity">Quantité de cocktail</string>
    <string name="enter_cocktail_quantity">Veuilez entrer la quantité de cocktail désiré (en cl)</string>
    <string name="launch">Lancer</string>
    <string name="configure_wifi">Configure wifi</string>
    <string name="cocktail_name">Nom du cocktail</string>
</resources>