<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_menu_edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="ifRoom"
        android:title="@string/edit">
    </item>

    <item
        android:id="@+id/main_menu_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom"
        android:title="@string/delete">
    </item>

    <item
        android:id="@+id/main_menu_admin"
        android:icon="@drawable/ic_qrcode_manager"
        app:showAsAction="ifRoom"
        android:title="@string/manage_qrcode">
    </item>

    <item
        android:id="@+id/main_menu_logout"
        android:icon="@drawable/ic_logout"
        app:showAsAction="ifRoom"
        android:title="@string/logout">
    </item>

</menu>